Cookie set properly
- Calendar uses data from a collection
- Mariontte handles all views
- listen for fetch
- not validating cookie
- duration handled

--- a/app/src/templates/register.html
+++ b/app/src/templates/register.html
@@ -3,7 +3,7 @@
 	<input id="registerFirstName" type="text" placeholder="First name" class="form-control">
 	<input id="registerLastName" type="text" placeholder="Last name" class="form-control">
 	<input id="registerUsername" type="text" placeholder="Username" class="form-control">
-	<input id="registerPassword" type="text" placeholder="Password" class="form-control">
+	<input id="registerPassword" type="password" placeholder="Password" class="form-control">
 	<button id="registerSubmit" class="btn btn-success btn-lg">Register</button>
 	<button id="registerCancel" class="btn btn-warning btn-lg">Cancel</button>
 </div>
