--- a/app/src/templates/reservationDetails.html
+++ b/app/src/templates/reservationDetails.html
@@ -2,7 +2,12 @@
 	<h2>{{title}}</h2>
 	<div>Reservation ID: {{id}}</div>
 	<div>Room ID: {{roomId}}</div>
-	<input type="text" id="newTitle" class="form-control" placeholder="Write your new title here">
-	<button id="updateTitle" class="btn btn-success btn-lg">Update title</button>
+	<div>Start: {{start}}</div>
+	<div>End: {{end}}</div>
+	<div>
+		<input type="text" id="newTitle" class="form-control" placeholder="Write your new title here">
+		<button id="updateTitle" class="btn btn-success btn-lg">Update title</button>
+	</div>
 	<button id="deleteReservation" class="btn btn-warning btn-lg">Delete reservation</button>
+	<button id="cancelReservation" class="btn btn-lg">Cancel</button>
 </div>
