--- a/app/src/templates/calendar.html
+++ b/app/src/templates/calendar.html
@@ -1,1 +1,4 @@
-<div id="calendar"></div>
+<div>
+	<button id="logout" class="btn btn-success align-right">Logout</button>
+	<div id="calendar"></div>
+</div>
