--- a/app/src/templates/login.html
+++ b/app/src/templates/login.html
@@ -1,7 +1,12 @@
 <div id="loginWrapper">
 	<h2>Login</h2>
-	<input id="loginUsername" type="text" placeholder="Username" class="form-control" />
-	<input id="loginPassword" type="password" placeholder="Password" class="form-control" />
-	<button id="loginSubmit" class="btn btn-success btn-lg">Login</button>
-	<button id="loginCancel" class="btn btn-warning btn-lg">Cancel</button>
+	<div>
+		<input id="loginUsername" type="text" placeholder="Username" class="form-control" />
+		<input id="loginPassword" type="password" placeholder="Password" class="form-control" />
+		<button id="loginSubmit" class="btn btn-success btn-lg">Login</button>
+	</div>
+	<br>
+	<div>
+		Don't have an account? <button id="signUp" class="btn btn-primary">Sign up</button> for free!!
+	</div>
 </div>
