User authentication updated
- only authorized users can modify data

--- a/app/src/templates/rooms.html
+++ b/app/src/templates/rooms.html
@@ -1,6 +1,5 @@
-<div display="inline">
-	<button id="logout" class="btn btn-success">Logout</button>
-	<button class="btn">Previous</button>
-	<p>{{roomName}}</p>
-	<button class="btn">Next</button>
+<div>
+	<div>Room name:</div>
+	<button class="btn btn-link roomName">{{roomName}}</button>
+	<br /><br /><br />
 </div>
