Calendar is a collectionView
- calendar is a collectionView, his events rendered in childView
- initial style added for all templates
- new gulp task: listen to sass changes

--- a/app/src/templates/reservationDetails.html
+++ b/app/src/templates/reservationDetails.html
@@ -1,10 +1,10 @@
-<div>
+<div id="detailsWrapper">
 	<h2>{{title}}</h2>
-	<div>Reservation ID: {{id}}</div>
-	<div>Room ID: {{roomId}}</div>
-	<div>Start: {{start}}</div>
-	<div>End: {{end}}</div>
-	<div>
+	<div class="contentWrapper">Reservation ID: <div class="reservationContent">{{id}}</div></div>
+	<div class="contentWrapper">Room ID: <div class="reservationContent">{{roomId}}</div></div>
+	<div class="contentWrapper">Start: <div class="reservationContent">{{start}}</div></div>
+	<div class="contentWrapper">End: <div class="reservationContent">{{end}}</div></div>
+	<div id="addTitleWrapper">
 		<input type="text" id="newTitle" class="form-control" placeholder="Write your new title here">
 		<button id="updateTitle" class="btn btn-success btn-lg">Update title</button>
 	</div>
