--- a/app/src/templates/rooms.html
+++ b/app/src/templates/rooms.html
@@ -1,5 +1,3 @@
-<div>
-	<div>Room name:</div>
+<div class="roomsWrapper">
 	<button class="btn btn-link roomName">{{roomName}}</button>
-	<br /><br /><br />
 </div>
