--- a/app/src/style/style.sass
+++ b/app/src/style/style.sass
@@ -1,3 +1,25 @@
 @import "./fullcalendar.scss";
 @import "../../../node_modules/bootstrap-sass/assets/stylesheets/_bootstrap-sprockets.scss";
 @import "../../../node_modules/bootstrap-sass/assets/stylesheets/_bootstrap.scss";
+@import "./login.sass";
+@import "./register.sass";
+@import "./rooms.sass";
+@import "./reservationDetails.sass"
+
+html, body
+  height: 100%
+  padding: 0
+  padding-bottom: 0
+
+
+body
+  background: #FFFFFF none repeat scroll 0% 0
+  height: 100%
+  text-align: center
+
+  #roomsWrapper
+  	margin-bottom: 2%
+
+  	#rooms
+  		div
+  			display: inline
