--- a/app/src/templates/login.html
+++ b/app/src/templates/login.html
@@ -1,5 +1,5 @@
 <div id="loginWrapper">
-	<h2>Login</h2>
+	<h2 class="loginTitle">Login</h2>
 	<div>
 		<input id="loginUsername" type="text" placeholder="Username" class="form-control" />
 		<input id="loginPassword" type="password" placeholder="Password" class="form-control" />
