--- a/app/src/templates/register.html
+++ b/app/src/templates/register.html
@@ -1,5 +1,5 @@
 <div id="registerWrapper" class="align-center">
-	<h2>Register</h2>
+	<h2 class="registerTitle">Register</h2>
 	<input id="registerFirstName" type="text" placeholder="First name" class="form-control">
 	<input id="registerLastName" type="text" placeholder="Last name" class="form-control">
 	<input id="registerUsername" type="text" placeholder="Username" class="form-control">
