E-mail format check
- on frontend and backend
- new input element added in register template

--- a/app/src/templates/register.html
+++ b/app/src/templates/register.html
@@ -4,6 +4,7 @@
 	<input id="registerLastName" type="text" placeholder="Last name" class="form-control">
 	<input id="registerUsername" type="text" placeholder="Username" class="form-control">
 	<input id="registerPassword" type="password" placeholder="Password" class="form-control">
+	<input id="registerEmail" type="password" placeholder="email@domain.com" class="form-control">
 	<button id="registerSubmit" class="btn btn-success btn-lg">Register</button>
 	<button id="registerCancel" class="btn btn-warning btn-lg">Cancel</button>
 </div>
