--- a/app/src/templates/login.html
+++ b/app/src/templates/login.html
@@ -1,11 +1,21 @@
 <div id="loginWrapper">
 	<h2 class="loginTitle">Login</h2>
 	<div>
-		<input id="loginUsername" type="text" placeholder="Username" class="form-control" />
-		<input id="loginPassword" type="password" placeholder="Password" class="form-control" />
+
+		<div class="inputWrapper">
+			<input id="loginUsername" type="text" placeholder="Username" class="form-control" />
+		</div>
+
+		<div class="inputWrapper">
+			<input id="loginPassword" type="password" placeholder="Password" class="form-control" />
+		</div>
+
+		<br />
 		<button id="loginSubmit" class="btn btn-success btn-lg">Login</button>
 	</div>
-	<br>
+
+	<br />
+
 	<div>
 		Don't have an account? <button id="signUp" class="btn btn-primary">Sign up</button> for free!!
 	</div>
