--- a/app/src/templates/register.html
+++ b/app/src/templates/register.html
@@ -1,10 +1,28 @@
-<div id="registerWrapper" class="align-center">
+<div id="registerWrapper" class="align-center container">
 	<h2 class="registerTitle">Register</h2>
-	<input id="registerFirstName" type="text" placeholder="First name" class="form-control">
-	<input id="registerLastName" type="text" placeholder="Last name" class="form-control">
-	<input id="registerUsername" type="text" placeholder="Username" class="form-control">
-	<input id="registerPassword" type="password" placeholder="Password" class="form-control">
-	<input id="registerEmail" type="password" placeholder="email@domain.com" class="form-control">
+
+	<div class="displayInline row">	
+		<input id="registerFirstName" type="text" placeholder="First name" class="form-control">
+	</div>
+	
+	<div class="displayInline row">
+		<input id="registerLastName" type="text" placeholder="Last name" class="form-control">
+	</div>
+	
+	<div class="displayInline row">
+		<input id="registerUsername" type="text" placeholder="Username" class="form-control">
+	</div>
+	
+	<div class="displayInline row">
+		<input id="registerPassword" type="password" placeholder="Password" class="form-control">
+	</div>
+	
+	<div class="displayInline row">
+		<input id="registerEmail" type="text" placeholder="email@domain.com" class="form-control">
+	</div>
+	
+	<br />
+	
 	<button id="registerSubmit" class="btn btn-success btn-lg">Register</button>
 	<button id="registerCancel" class="btn btn-warning btn-lg">Cancel</button>
 </div>
