Changes in register logic and calendarView
- verified and non-verified users in the same table User
- new listening module: cron
- login and register on frontend extend validationView with a common method validate
- calendarView renders collection and then child
- login and register templates changed
- login and register styles updated

--- a/app/src/style/login.sass
+++ b/app/src/style/login.sass
@@ -12,31 +12,20 @@ $radius: 5px
 
 	.inputWrapper
 		width: 100%
-		margin-left: 2%
+		margin-top: $defaultMargin
 
-		.form-control
-			width: 92%
-
-		.loginInputError
+		.loginField
+			width: 15%
+		
+		.InputError
 			border-color: red
-			margin-bottom: 2%
 
-		.loginError
+		.Error
 			color: red
 			margin-bottom: 4%
 
 	.loginTitle
 		margin: $defaultMargin
-
-	#loginUsername, #loginPassword
-		margin: $defaultMargin
-
-	#loginUsername
-		margin-bottom: 0
-
-	#loginPassword
-		margin-top: 1px
-		margin-bottom: 0
 
 	#loginSubmit
 		width: 50%
