--- a/app/src/style/register.sass
+++ b/app/src/style/register.sass
@@ -10,17 +10,17 @@ $defaultMargin: 2%
 	text-align: center
 
 	.displayInline
-		width: 100%
-		margin-left: 2%
+		width: 90%
+		margin: $defaultMargin
 
-		.form-control
-			width: 95%
+		.registerField
+			width: 16%
 
-		.registerInputError
+		.InputError
 			border-color: red
 			margin-bottom: 2%
 
-		.registerError
+		.Error
 			color: red
 			margin-bottom: 4%
 
