--- a/app/src/templates/login.html
+++ b/app/src/templates/login.html
@@ -2,11 +2,13 @@
 	<h2 class="loginTitle">Login</h2>
 	<div>
 
-		<div class="inputWrapper">
+		<div class="inputWrapper input-group">
+			<label class="loginField input-group-addon">Username:</label>
 			<input id="loginUsername" type="text" placeholder="Username" class="form-control" />
 		</div>
 
-		<div class="inputWrapper">
+		<div class="inputWrapper input-group">
+			<label class="loginField input-group-addon">Password:</label>
 			<input id="loginPassword" type="password" placeholder="Password" class="form-control" />
 		</div>
 
