--- a/app/src/templates/register.html
+++ b/app/src/templates/register.html
@@ -1,23 +1,28 @@
 <div id="registerWrapper" class="align-center container">
 	<h2 class="registerTitle">Register</h2>
 
-	<div class="displayInline row">	
+	<div class="displayInline input-group">
+		<label class="registerField input-group-addon">First name:</label>
 		<input id="registerFirstName" type="text" placeholder="First name" class="form-control">
 	</div>
 	
-	<div class="displayInline row">
+	<div class="displayInline input-group">
+		<label class="registerField input-group-addon">Last name:</label>
 		<input id="registerLastName" type="text" placeholder="Last name" class="form-control">
 	</div>
 	
-	<div class="displayInline row">
+	<div class="displayInline input-group">
+		<label class="registerField input-group-addon">Username:</label>
 		<input id="registerUsername" type="text" placeholder="Username" class="form-control">
 	</div>
 	
-	<div class="displayInline row">
+	<div class="displayInline input-group">
+		<label class="registerField input-group-addon">Password:</label>
 		<input id="registerPassword" type="password" placeholder="Password" class="form-control">
 	</div>
 	
-	<div class="displayInline row">
+	<div class="displayInline input-group">
+		<label class="registerField input-group-addon">E-mail:</label>
 		<input id="registerEmail" type="text" placeholder="email@domain.com" class="form-control">
 	</div>
 	
