--- a/app/src/style/reservationDetails.sass
+++ b/app/src/style/reservationDetails.sass
@@ -9,9 +9,6 @@
 
 	.contentWrapper
 		margin: 2%
-		
-		.reservationContent
-			font-weight: bold
 	
 	#addTitleWrapper
 		margin: 2%
@@ -20,8 +17,19 @@
 		background-color: #E3E3E3
 		padding: 2%
 
-		#newTitle
-			margin-bottom: 2px
+		.input-group
+			width: 100%
+			margin-bottom: 2%
+
+			.InputError
+				border-color: red
+
+			.Error
+				color: red
+				margin-bottom: 4%
+
+			.input-group-addon
+				width: 20%
 
 		#updateTitle
 			width: 50%
