--- a/app/src/templates/userReservationDetails.html
+++ b/app/src/templates/userReservationDetails.html
@@ -4,6 +4,13 @@
 	<div class="contentWrapper"><label>Room ID: </label><div class="reservationContent">{{roomId}}</div></div>
 	<div class="contentWrapper"><label>Start: </label><div class="reservationContent">{{start}}</div></div>
 	<div class="contentWrapper"><label>End: </label><div class="reservationContent">{{end}}</div></div>
-	
-	<button id="returnToCalendar" class="btn btn-lg">Return to calendar</button>
+	<div id="addTitleWrapper">
+		<div class="input-group">
+			<label class="input-group-addon">New title: </label>
+			<input type="text" id="newTitle" class="form-control" placeholder="Write your new title here">
+		</div>
+		<button id="updateTitle" class="btn btn-success btn-lg">Update title</button>
+	</div>
+	<button id="deleteReservation" class="btn btn-warning btn-lg">Delete reservation</button>
+	<button id="cancelReservation" class="btn btn-lg">Cancel</button>
 </div>
