--- a/app/src/style/reservationDetails.sass
+++ b/app/src/style/reservationDetails.sass
@@ -31,8 +31,5 @@
       .input-group-addon
         width: 20%
 
-    #updateTitle
-      width: 50%
-
-  #deleteReservation, #cancelReservation
+  #deleteReservation, #cancelReservation, #updateTitle
     margin-top: 2%
