--- a/app/src/templates/userReservationDetails.html
+++ b/app/src/templates/userReservationDetails.html
@@ -6,6 +6,6 @@
   <div class="contentWrapper"><label>End: </label><div class="reservationContent">{{end}}</div></div>
 
   <button id="updateTitle" class="btn btn-success btn-lg">Update title</button>
-  <button id="deleteReservation" class="btn btn-warning btn-lg">Delete reservation</button>
+  <button id="deleteReservation" class="btn btn-danger btn-lg">Delete reservation</button>
   <button id="cancelReservation" class="btn btn-lg">Cancel</button>
 </div>
