--- a/app/src/templates/calendar.html
+++ b/app/src/templates/calendar.html
@@ -1,4 +1,10 @@
 <div>
   <button id="logout" class="btn btn-success">Logout</button>
-  <div id="calendar"></div>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-xs-12">
+        <div id="calendar"></div>
+      </div>
+    </div>
+  </div>
 </div>
