Expiration listener and wrong url handled
- when deleting registered, but not confirmed users, send e-mail to tell the user about the deletion
- if a wrong url is inserted after # character, page will be redirected to calendar
- reset password unfinished
- user details added
- reservation details not working when refreshed
- added model for user data
- new routes:
	- get user data
	- update password
	- send e-mail for reseting password

--- a/app/src/templates/calendar.html
+++ b/app/src/templates/calendar.html
@@ -1,5 +1,6 @@
 <div>
-  <button id="logout" class="btn btn-success">Logout</button>
+  <button id="userDetails" class="btn btn-success">Your details</button>
+  <button id="logout" class="btn btn-danger">Logout</button>
   <div class="container-fluid">
     <div class="row">
       <div class="col-xs-12">
