Some style added
- resetPassword style added
- userDetails style started

--- a/app/src/templates/resetPassword.html
+++ b/app/src/templates/resetPassword.html
@@ -16,6 +16,6 @@
 
     <button id="resetPasswordButton" class="btn btn-success btn-lg">Reset password</button>
 
-    <button id="resetPasswordCancel" class="btn btn-lg">Cancel</button>
+    <button id="resetPasswordCancel" class="btn btn-warning btn-lg">Cancel</button>
   </div>
 </div>
