--- a/app/src/templates/userDetails.html
+++ b/app/src/templates/userDetails.html
@@ -1,34 +1,34 @@
-<div>
-  <div>
-    <label>ID: </label>
-    <span>{{id}}</span>
+<div id="userDetails">
+  <div class="userDetailsWrapper input-group">
+    <label class="input-group-addon">ID: </label>
+    <span class="input-group-addon">{{id}}</span>
   </div>
 
-  <div>
-    <label>Username: </label>
-    <span>{{username}}</span>
+  <div class="userDetailsWrapper input-group">
+    <label class="input-group-addon">Username: </label>
+    <span class="input-group-addon">{{username}}</span>
   </div>
 
-  <div>
-    <label>First name: </label>
-    <span>{{firstName}}</span>
+  <div class="userDetailsWrapper input-group">
+    <label class="input-group-addon">First name: </label>
+    <span class="input-group-addon">{{firstName}}</span>
   </div>
 
-  <div>
-    <label>Last name: </label>
-    <span>{{lastName}}</span>
+  <div class="userDetailsWrapper input-group">
+    <label class="input-group-addon">Last name: </label>
+    <span class="input-group-addon">{{lastName}}</span>
   </div>
 
-  <div>
-    <label>E-mail: </label>
-    <span>{{email}}</span>
+  <div class="userDetailsWrapper input-group">
+    <label class="input-group-addon">E-mail: </label>
+    <span class="input-group-addon">{{email}}</span>
   </div>
 
-  <div>
-    <label>Account created at: </label>
-    <span>{{createdAt}}</span>
+  <div class="userDetailsWrapper input-group">
+    <label class="input-group-addon">Account created at: </label>
+    <span class="input-group-addon">{{createdAt}}</span>
   </div>
 
-  <button id="resetPasswordButton" class="btn btn-success">Reset password</button>
-  <button id="backToCalendarButton" class="btn">Return to calendar</button>
+  <button id="resetPasswordButton" class="btn btn-success btn-lg">Reset password</button>
+  <button id="backToCalendarButton" class="btn btn-lg">Return to calendar</button>
 </div>
