--- a/app/src/style/style.sass
+++ b/app/src/style/style.sass
@@ -5,12 +5,13 @@
 @import "./register.sass";
 @import "./rooms.sass";
 @import "./reservationDetails.sass"
+@import "./resetPassword.sass"
+@import "./userDetails.sass"
 
 html, body
   height: 100%
   padding: 0
   padding-bottom: 0
-
 
 body
   background: #FFFFFF none repeat scroll 0% 0
