Password update via e-mail
- login.js fetches user info
- resetPassword button triggeres e-mail
- link for password update is in mail text
- password update checkes for password inputs errors
- urlId is a hashed random string

--- a/app/src/templates/resetPassword.html
+++ b/app/src/templates/resetPassword.html
@@ -4,12 +4,12 @@
 
     <div class="inputWrapper input-group">
       <label class="resetPasswordField input-group-addon">New password:</label>
-      <input id="newPassword" type="text" placeholder="New password" class="form-control" />
+      <input id="newPassword" type="password" placeholder="New password" class="form-control" />
     </div>
 
     <div class="inputWrapper input-group">
       <label class="resetPasswordField input-group-addon">Write your new password again:</label>
-      <input id="newPasswordConfirmation" type="New password confirmation" placeholder="Password" class="form-control" />
+      <input id="newPasswordConfirmation" type="password" placeholder="Password" class="form-control" />
     </div>
 
     <br />
