--- a/app/src/templates/calendar.html
+++ b/app/src/templates/calendar.html
@@ -1,5 +1,5 @@
 <div>
-  <button id="userDetails" class="btn btn-success">Your details</button>
+  <button id="userDetailsRedirect" class="btn btn-success">Your details</button>
   <button id="logout" class="btn btn-danger">Logout</button>
   <div class="container-fluid">
     <div class="row">
