--- a/app/src/style/resetPassword.sass
+++ b/app/src/style/resetPassword.sass
@@ -1,10 +1,13 @@
 $defaultMargin: 1%
+$defaultRadius: 5px
 
 #resetPasswordWrapper
   background-color: #DDD
   width: 72%
   padding: $defaultMargin
   margin-left: 13%
+  margin-top: $defaultMargin + 2%
+  border-radius: $defaultRadius
 
   .resetPasswordTitle
     margin-bottom: $defaultMargin + 2%
