--- a/app/src/templates/userDetails.html
+++ b/app/src/templates/userDetails.html
@@ -1,32 +1,33 @@
 <div id="userDetails">
-  <div class="userDetailsWrapper input-group">
-    <label class="input-group-addon">ID: </label>
-    <span class="input-group-addon">{{id}}</span>
+  <h2 id="userDetailsTitle">Your information</h2>
+  <div class="userDetailsWrapper">
+    <label class="userDetailsLabel">ID: </label>
+    <span >{{id}}</span>
   </div>
 
-  <div class="userDetailsWrapper input-group">
-    <label class="input-group-addon">Username: </label>
-    <span class="input-group-addon">{{username}}</span>
+  <div class="userDetailsWrapper">
+    <label class="userDetailsLabel">Username: </label>
+    <span >{{username}}</span>
   </div>
 
-  <div class="userDetailsWrapper input-group">
-    <label class="input-group-addon">First name: </label>
-    <span class="input-group-addon">{{firstName}}</span>
+  <div class="userDetailsWrapper">
+    <label class="userDetailsLabel">First name: </label>
+    <span >{{firstName}}</span>
   </div>
 
-  <div class="userDetailsWrapper input-group">
-    <label class="input-group-addon">Last name: </label>
-    <span class="input-group-addon">{{lastName}}</span>
+  <div class="userDetailsWrapper">
+    <label class="userDetailsLabel">Last name: </label>
+    <span >{{lastName}}</span>
   </div>
 
-  <div class="userDetailsWrapper input-group">
-    <label class="input-group-addon">E-mail: </label>
-    <span class="input-group-addon">{{email}}</span>
+  <div class="userDetailsWrapper">
+    <label class="userDetailsLabel">E-mail: </label>
+    <span >{{email}}</span>
   </div>
 
-  <div class="userDetailsWrapper input-group">
-    <label class="input-group-addon">Account created at: </label>
-    <span class="input-group-addon">{{createdAt}}</span>
+  <div class="userDetailsWrapper">
+    <label class="userDetailsLabel">Account created at: </label>
+    <span >{{createdAt}}</span>
   </div>
 
   <button id="resetPasswordButton" class="btn btn-success btn-lg">Reset password</button>
