Datetimes on details and userDetails views in user-friendly format

--- a/app/src/templates/userReservationDetails.html
+++ b/app/src/templates/userReservationDetails.html
@@ -1,9 +1,13 @@
 <div id="detailsWrapper">
   <h2 id="newTitle" contentEditable="true">{{title}}</h2>
+
   <div class="contentWrapper"><label>Reservation ID: </label><div class="reservationContent">{{id}}</div></div>
+
   <div class="contentWrapper"><label>Room ID: </label><div class="reservationContent">{{roomId}}</div></div>
-  <div class="contentWrapper"><label>Start: </label><div class="reservationContent">{{start}}</div></div>
-  <div class="contentWrapper"><label>End: </label><div class="reservationContent">{{end}}</div></div>
+
+  <div class="contentWrapper"><label>Start: </label><div id="userDetailsStart" class="reservationContent">{{start}}</div></div>
+
+  <div class="contentWrapper"><label>End: </label><div id="userDetailsEnd" class="reservationContent">{{end}}</div></div>
 
   <button id="updateTitle" class="btn btn-success btn-lg">Update title</button>
   <button id="deleteReservation" class="btn btn-danger btn-lg">Delete reservation</button>
