--- a/app/src/templates/reservationDetails.html
+++ b/app/src/templates/reservationDetails.html
@@ -1,9 +1,13 @@
 <div id="detailsWrapper">
   <h2>{{title}}</h2>
+
   <div class="contentWrapper"><label>Reservation ID: </label><div class="reservationContent">{{id}}</div></div>
+
   <div class="contentWrapper"><label>Room ID: </label><div class="reservationContent">{{roomId}}</div></div>
-  <div class="contentWrapper"><label>Start: </label><div class="reservationContent">{{start}}</div></div>
-  <div class="contentWrapper"><label>End: </label><div class="reservationContent">{{end}}</div></div>
+
+  <div class="contentWrapper"><label>Start: </label><div id="eventDetailStart" class="reservationContent">{{start}}</div></div>
+
+  <div class="contentWrapper"><label>End: </label><div id="eventDetailEnd" class="reservationContent">{{end}}</div></div>
 
   <button id="returnToCalendar" class="btn btn-lg">Return to calendar</button>
 </div>
