Reset password without cookie
- new view and template for requesting a password reset
- backend routes don't require cookie
- token not added

--- a/app/src/templates/login.html
+++ b/app/src/templates/login.html
@@ -1,24 +1,28 @@
-<div id="loginWrapper">
-  <h2 class="loginTitle">Login</h2>
-  <div>
+<div>
+  <div id="loginWrapper">
+    <h2 class="loginTitle">Login</h2>
+    <div>
 
-    <div class="inputWrapper input-group">
-      <label class="loginField input-group-addon">Username:</label>
-      <input id="loginUsername" type="text" placeholder="Username" class="form-control" />
-    </div>
+      <div class="inputWrapper input-group">
+        <label class="loginField input-group-addon">Username:</label>
+        <input id="loginUsername" type="text" placeholder="Username" class="form-control" />
+      </div>
 
-    <div class="inputWrapper input-group">
-      <label class="loginField input-group-addon">Password:</label>
-      <input id="loginPassword" type="password" placeholder="Password" class="form-control" />
+      <div class="inputWrapper input-group">
+        <label class="loginField input-group-addon">Password:</label>
+        <input id="loginPassword" type="password" placeholder="Password" class="form-control" />
+      </div>
+
+      <br />
+      <button id="loginSubmit" class="btn btn-success btn-lg">Login</button>
     </div>
 
     <br />
-    <button id="loginSubmit" class="btn btn-success btn-lg">Login</button>
+
+    <div>
+      Don't have an account? <button id="signUp" class="btn btn-primary">Sign up</button> for free!!
+    </div>
   </div>
 
-  <br />
-
-  <div>
-    Don't have an account? <button id="signUp" class="btn btn-primary">Sign up</button> for free!!
-  </div>
+  <div>Forgot your password? Reset it <button id="resetPasswordRequest" class="btn btn-link">here</button></div>
 </div>
