--- a/app/src/templates/userDetails.html
+++ b/app/src/templates/userDetails.html
@@ -27,7 +27,7 @@
 
   <div class="userDetailsWrapper">
     <label class="userDetailsLabel">Account created at: </label>
-    <span >{{createdAt}}</span>
+    <span id="userCreatedAt">{{createdAt}}</span>
   </div>
 
   <button id="resetPasswordButton" class="btn btn-success btn-lg">Reset password</button>
