User resrvation details fixed when switching views
- calendar promised child element fixed, now it's always in DOM

--- a/app/src/templates/login.html
+++ b/app/src/templates/login.html
@@ -1,8 +1,7 @@
 <div>
   <div id="loginWrapper">
     <h2 class="loginTitle">Login</h2>
-    <div>
-
+    <form>
       <div class="inputWrapper input-group">
         <label class="loginField input-group-addon">Username:</label>
         <input id="loginUsername" type="text" placeholder="Username" class="form-control" />
@@ -15,7 +14,7 @@
 
       <br />
       <button id="loginSubmit" class="btn btn-success btn-lg">Login</button>
-    </div>
+    </form>
 
     <br />
 
