--- a/app/src/style/login.sass
+++ b/app/src/style/login.sass
@@ -1,5 +1,6 @@
 $defaultMargin: 2%
 $radius: 5px
+$defaultColor: red
 
 #loginWrapper
   width: 60%
@@ -18,10 +19,10 @@ $radius: 5px
       width: 20%
 
     .InputError
-      border-color: red
+      border-color: $defaultColor
 
     .Error
-      color: red
+      color: $defaultColor
       margin-bottom: 4%
 
   .loginTitle
