--- a/app/src/style/style.sass
+++ b/app/src/style/style.sass
@@ -7,6 +7,7 @@
 @import "./reservationDetails.sass"
 @import "./resetPassword.sass"
 @import "./userDetails.sass"
+@import "./resetPasswordRequest.sass"
 
 html, body
   height: 100%
