--- a/app/src/style/style.sass
+++ b/app/src/style/style.sass
@@ -1,9 +1,9 @@
-@import "./fullcalendar.scss";
-@import "../../../node_modules/bootstrap-sass/assets/stylesheets/_bootstrap-sprockets.scss";
-@import "../../../node_modules/bootstrap-sass/assets/stylesheets/_bootstrap.scss";
-@import "./login.sass";
-@import "./register.sass";
-@import "./rooms.sass";
+@import inline("../../../fullcalendar.css")
+@import "../../../node_modules/bootstrap-sass/assets/stylesheets/_bootstrap-sprockets.scss"
+@import "../../../node_modules/bootstrap-sass/assets/stylesheets/_bootstrap.scss"
+@import "./login.sass"
+@import "./register.sass"
+@import "./rooms.sass"
 @import "./reservationDetails.sass"
 @import "./resetPassword.sass"
 @import "./userDetails.sass"
