Fullcalendar style imported properly
- cookie absence not blocking fullcalendar.css import
- clicking on day in month view doesn't responsd with notification error

--- a/app/src/style/style.sass
+++ b/app/src/style/style.sass
@@ -1,4 +1,4 @@
-@import inline("../../../fullcalendar.css")
+@import "../../../fullcalendar.css"
 @import "../../../node_modules/bootstrap-sass/assets/stylesheets/_bootstrap-sprockets.scss"
 @import "../../../node_modules/bootstrap-sass/assets/stylesheets/_bootstrap.scss"
 @import "./login.sass"
