--- a/app/src/templates/register.hbs
+++ b/app/src/templates/register.hbs
@@ -1,4 +1,4 @@
-<form id="registerWrapper" class="align-center container">
+<div id="registerWrapper" class="align-center container">
   <h2 class="registerTitle">Register</h2>
 
   <div class="displayInline input-group">
@@ -30,4 +30,4 @@
 
   <button id="registerSubmit" class="btn btn-success btn-lg">Register</button>
   <button id="registerCancel" class="btn btn-warning btn-lg">Cancel</button>
-</form>
+</div>
