--- a/app/src/templates/login.hbs
+++ b/app/src/templates/login.hbs
@@ -1,7 +1,7 @@
 <div>
   <div id="loginWrapper">
     <h2 class="loginTitle">Login</h2>
-    <form>
+    <div>
       <div class="inputWrapper input-group">
         <label class="loginField input-group-addon">Username:</label>
         <input id="loginUsername" type="text" placeholder="Username" class="form-control" />
@@ -14,7 +14,7 @@
 
       <br />
       <button id="loginSubmit" class="btn btn-success btn-lg">Login</button>
-    </form>
+    </div>
 
     <br />
 
