--- a/app/src/style/style.sass
+++ b/app/src/style/style.sass
@@ -1,4 +1,4 @@
-@import "../../../fullcalendar.css"
+@import "../../../node_modules/fullcalendar/dist/fullcalendar"
 @import "../../../node_modules/bootstrap-sass/assets/stylesheets/_bootstrap-sprockets.scss"
 @import "../../../node_modules/bootstrap-sass/assets/stylesheets/_bootstrap.scss"
 @import "./login.sass"
@@ -8,6 +8,7 @@
 @import "./resetPassword.sass"
 @import "./userDetails.sass"
 @import "./resetPasswordRequest.sass"
+@import "./prompt.sass"
 
 html, body
   height: 100%
