Add event notification finished

--- a/app/src/style/style.sass
+++ b/app/src/style/style.sass
@@ -9,6 +9,7 @@
 @import "./userDetails.sass"
 @import "./resetPasswordRequest.sass"
 @import "./prompt.sass"
+@import "./calendar.sass"
 
 html, body
   height: 100%
