--- a/app/src/templates/login.hbs
+++ b/app/src/templates/login.hbs
@@ -4,7 +4,7 @@
     <div>
       <div class="inputWrapper input-group">
         <label class="loginField input-group-addon">Username:</label>
-        <input id="loginUsername" type="text" placeholder="Username" class="form-control" />
+        <input id="loginUsername" type="text" placeholder="Username" class="form-control" autofocus />
       </div>
 
       <div class="inputWrapper input-group">
