--- a/app/src/templates/register.hbs
+++ b/app/src/templates/register.hbs
@@ -3,7 +3,7 @@
 
   <div class="displayInline input-group">
     <label class="registerField input-group-addon">First name:</label>
-    <input id="registerFirstName" type="text" placeholder="First name" class="form-control">
+    <input id="registerFirstName" type="text" placeholder="First name" class="form-control" autofocus />
   </div>
 
   <div class="displayInline input-group">
