--- a/app/src/templates/register.hbs
+++ b/app/src/templates/register.hbs
@@ -1,4 +1,4 @@
-<div id="registerWrapper" class="align-center container">
+<form name="registerForm" onsubmit="return false;" id="registerWrapper" class="align-center container">
   <h2 class="registerTitle">Register</h2>
 
   <div class="displayInline input-group">
@@ -28,6 +28,6 @@
 
   <br />
 
-  <button id="registerSubmit" class="btn btn-success btn-lg">Register</button>
+  <button id="registerSubmit" class="btn btn-success btn-lg" type="submit">Register</button>
   <button id="registerCancel" class="btn btn-warning btn-lg">Cancel</button>
-</div>
+</form>
