--- a/app/src/templates/resetPassword.hbs
+++ b/app/src/templates/resetPassword.hbs
@@ -1,7 +1,6 @@
 <div id="resetPasswordWrapper">
   <h2 class="resetPasswordTitle">Reset your password</h2>
-  <div>
-
+  <form name="resetPasswordForm" onsubmit="return false">
     <div class="inputWrapper input-group">
       <label class="resetPasswordField input-group-addon">New password:</label>
       <input id="newPassword" type="password" placeholder="New password" class="form-control" />
@@ -14,8 +13,8 @@
 
     <br />
 
-    <button id="resetPasswordButton" class="btn btn-success btn-lg">Reset password</button>
+    <button id="resetPasswordButton" class="btn btn-success btn-lg" type="submit">Reset password</button>
 
     <button id="resetPasswordCancel" class="btn btn-warning btn-lg">Cancel</button>
-  </div>
+  </form>
 </div>
