--- a/app/src/templates/resetPasswordRequest.hbs
+++ b/app/src/templates/resetPasswordRequest.hbs
@@ -1,11 +1,11 @@
 <div>
-  <form id="rprForm">
+  <form name="rprForm" onsubmit="return false;" id="rprForm">
     <div class="inputWrapper input-group">
       <label class="rprLabel input-group-addon">Username or e-mail:</label>
       <input id="rprUsername" type="text" placeholder="Username or password" class="form-control" />
     </div>
 
-    <button id="resetPasswordRequest" class="btn btn-success">Reset password</button>
+    <button id="resetPasswordRequest" class="btn btn-success" type="submit">Reset password</button>
     <button id="rprCancel" class="btn btn-warning">Cancel</button>
   </form>
 </div>
