Focus first form element, small changes
- on view show focus the first input element
- small changes on backend (no changes in functionality)

--- a/app/src/templates/login.hbs
+++ b/app/src/templates/login.hbs
@@ -4,7 +4,7 @@
     <form name="loginForm" onsubmit="return false;">
       <div class="inputWrapper input-group">
         <label class="loginField input-group-addon">Username:</label>
-        <input id="loginUsername" type="text" placeholder="Username" class="form-control" autofocus />
+        <input id="loginUsername" type="text" placeholder="Username" class="form-control" />
       </div>
 
       <div class="inputWrapper input-group">
