Small frontend updates and e-mail html as reply
- duration added on userReservationDetails and resrevationDetails
- userDetails now smaller in size
- register and reset password send html in e-mail

--- a/app/src/templates/reservationDetails.hbs
+++ b/app/src/templates/reservationDetails.hbs
@@ -9,5 +9,7 @@
 
   <div class="contentWrapper"><label>End: </label><div id="eventDetailEnd" class="reservationContent">{{end}}</div></div>
 
+  <div class="contentWrapper"><label>Duration: </label><div id="reservationDuration" class="reservationContent"></div></div>
+
   <button id="returnToCalendar" class="btn btn-lg">Return to calendar</button>
 </div>
