--- a/app/src/templates/resetPasswordRequest.hbs
+++ b/app/src/templates/resetPasswordRequest.hbs
@@ -1,5 +1,6 @@
-<div>
+<div id="rprWrapper">
   <form name="rprForm" onsubmit="return false;" id="rprForm">
+    <h2>Send a reset password request</h2>
     <div class="inputWrapper input-group">
       <label class="rprLabel input-group-addon">Username or e-mail:</label>
       <input id="rprUsername" type="text" placeholder="Username or password" class="form-control" />
