--- a/app/src/templates/userDetails.hbs
+++ b/app/src/templates/userDetails.hbs
@@ -30,6 +30,6 @@
     <span id="userCreatedAt">{{createdAt}}</span>
   </div>
 
-  <button id="resetPasswordButton" class="btn btn-success btn-lg">Reset password</button>
-  <button id="backToCalendarButton" class="btn btn-lg">Return to calendar</button>
+  <button id="resetPasswordButton" class="btn btn-success">Reset password</button>
+  <button id="backToCalendarButton" class="btn">Return to calendar</button>
 </div>
