--- a/app/src/templates/userReservationDetails.hbs
+++ b/app/src/templates/userReservationDetails.hbs
@@ -9,7 +9,9 @@
 
   <div class="contentWrapper"><label>End: </label><div id="userDetailsEnd" class="reservationContent">{{end}}</div></div>
 
-  <button id="updateTitle" class="btn btn-success btn-lg" type="submit">Update title</button>
+  <div class="contentWrapper"><label>Duration: </label><div id="userDetailsDuration" class="reservationContent"></div></div>
+
+  <button id="updateTitle" class="btn btn-success btn-lg" type="submit">Save</button>
   <button id="deleteReservation" class="btn btn-danger btn-lg">Delete reservation</button>
   <button id="cancelReservation" class="btn btn-lg">Cancel</button>
 </form>
