--- a/app/src/style/resetPasswordRequest.sass
+++ b/app/src/style/resetPasswordRequest.sass
@@ -2,34 +2,37 @@ $defaultColor: red
 $defaultMargin: 2%
 $radius: 5px
 
-#rprForm
-  margin-top: 100px
-  padding: $defaultMargin
-  width: 60%
-  margin-left: 20%
-  background-color: #E3E3E3
-  border-radius: $radius
+#rprWrapper
+  padding-top: 100px
 
-  .inputWrapper
-    width: 100%
-    margin-top: $defaultMargin
-    margin-bottom: $defaultMargin
+  #rprForm
 
-    .InputError
-      border-color: $defaultColor
+    padding: $defaultMargin
+    width: 60%
+    margin: 0 auto
+    background-color: #E3E3E3
+    border-radius: $radius
 
-    .Error
-      color: $defaultColor
+    .inputWrapper
+      width: 100%
+      margin-top: $defaultMargin
+      margin-bottom: $defaultMargin
 
-    .rprLabel
-      width: 20%
+      .InputError
+        border-color: $defaultColor
 
-  #resetPasswordRequest, #rprCancel
-    margin-top: $defaultMargin
-    width: 30%
+      .Error
+        color: $defaultColor
 
-  #resetPaswordRequest
-    margin-right: $defaultMargin - 1%
+      .rprLabel
+        width: 20%
 
-  #rprCancel
-    margin-left: $defaultMargin - 1%
+    #resetPasswordRequest, #rprCancel
+      margin-top: $defaultMargin
+      width: 30%
+
+    #resetPaswordRequest
+      margin-right: $defaultMargin - 1%
+
+    #rprCancel
+      margin-left: $defaultMargin - 1%
