--- a/app/src/templates/calendar.hbs
+++ b/app/src/templates/calendar.hbs
@@ -1,4 +1,4 @@
-<div>
+<div id="calendarWrapper">
   <button id="userDetailsRedirect" class="btn btn-success">Your details</button>
   <button id="logout" class="btn btn-danger">Logout</button>
   <div class="container-fluid">
