--- a/app/src/templates/navbar.hbs
+++ b/app/src/templates/navbar.hbs
@@ -2,7 +2,7 @@
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbarButtons" aria-expanded="true">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -12,17 +12,17 @@
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+    <div class="collapse navbar-collapse" id="navbarButtons">
       <ul class="nav navbar-nav">
         <li class="dropdown">
-          <div id="dropdownButton" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Choose your city <span class="caret"></span></div>
+          <a id="dropdownButton" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Choose your city <span class="caret"></span></a>
           <ul id="cityDropdown" class="dropdown-menu">
           </ul>
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><button id="userDetailsRedirect" class="btn btn-success">Your details</button></li>
-        <li><button id="logout" class="btn btn-danger">Logout</button></li>
+        <li><a id="userDetailsRedirect" class="btn btn-success">Your details</a></li>
+        <li><a id="logout" class="btn btn-danger">Logout</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
