Reservation details style change
- username displayed on userDetails button

--- a/app/src/style/reservationDetails.sass
+++ b/app/src/style/reservationDetails.sass
@@ -1,21 +1,27 @@
+$defaultMargin: 1%
+
 #detailsWrapper
-  border-radius: 5px
-  border-color: #E3E3E3
-  border-style: solid
-  width: 60%
-  margin-left: 20%
-  padding-top: 2%
-  padding-bottom: 2%
+  font-size: 150%
+  text-align: center
+
+  #reservationDetailsTitle, #newTitle
+    font-weight: bold
+    color: #66BBCC
 
   .contentWrapper
-    margin: 2%
+    margin-top: $defaultMargin
+    margin-bottom: $defaultMargin
+    text-align: left
+
+    .reservationDetailsLabel
+      width: 49%
+      text-align: right
+      margin-right: $defaultMargin
 
   #addTitleWrapper
-    margin: 2%
-    margin-left: 0
-    margin-right: 0
-    background-color: #E3E3E3
-    padding: 2%
+    margin-top: $defaultMargin
+    margin-bottom: $defaultMargin
+    text-align: left
 
     .input-group
       width: 100%
