--- a/app/src/style/style.sass
+++ b/app/src/style/style.sass
@@ -10,6 +10,7 @@
 @import "./resetPasswordRequest.sass"
 @import "./prompt.sass"
 @import "./calendar.sass"
+@import "./navbar.scss"
 
 html, body
   height: 100%
