--- a/app/src/templates/navbar.hbs
+++ b/app/src/templates/navbar.hbs
@@ -21,8 +21,8 @@
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a id="userDetailsRedirect" class="btn btn-success">Your details</a></li>
-        <li><a id="logout" class="btn btn-danger">Logout</a></li>
+        <li class="rightButtons"><a id="userDetailsRedirect" class="btn btn-link"></a></li>
+        <li class="rightButtons"><a id="logout" class="btn btn-link">Logout <span class="glyphicon glyphicon-log-out"></span></a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
