--- a/app/src/templates/room.hbs
+++ b/app/src/templates/room.hbs
@@ -1,3 +1,3 @@
-<div class="roomsWrapper">
-  <button class="btn btn-link roomName">{{roomName}}</button>
+<div class="roomsWrapper roomName">
+  <button class="btn btn-link">{{roomName}}</button>
 </div>
