--- a/app/src/templates/userReservationDetails.hbs
+++ b/app/src/templates/userReservationDetails.hbs
@@ -1,15 +1,25 @@
 <form name="userReservationDetailsForm" onsubmit="return false;" id="detailsWrapper">
   <h2 id="newTitle" contentEditable="true">{{title}}</h2>
 
-  <div class="contentWrapper"><label>Reservation ID: </label><div class="reservationContent">{{id}}</div></div>
+  <div class="contentWrapper">
+    <label class="reservationDetailsLabel">Reservation ID: </label><span class="reservationContent">{{id}}</span>
+  </div>
 
-  <div class="contentWrapper"><label>Room ID: </label><div class="reservationContent">{{roomId}}</div></div>
+  <div class="contentWrapper">
+    <label class="reservationDetailsLabel">Room ID: </label><span class="reservationContent">{{roomId}}</span>
+  </div>
 
-  <div class="contentWrapper"><label>Start: </label><div id="userDetailsStart" class="reservationContent">{{start}}</div></div>
+  <div class="contentWrapper">
+    <label class="reservationDetailsLabel">Start: </label><span id="userDetailsStart" class="reservationContent">{{start}}</span>
+  </div>
 
-  <div class="contentWrapper"><label>End: </label><div id="userDetailsEnd" class="reservationContent">{{end}}</div></div>
+  <div class="contentWrapper">
+    <label class="reservationDetailsLabel">End: </label><span id="userDetailsEnd" class="reservationContent">{{end}}</span>
+  </div>
 
-  <div class="contentWrapper"><label>Duration: </label><div id="userDetailsDuration" class="reservationContent"></div></div>
+  <div class="contentWrapper">
+    <label class="reservationDetailsLabel">Duration: </label><span id="userDetailsDuration" class="reservationContent"></span>
+  </div>
 
   <button id="updateTitle" class="btn btn-success btn-lg" type="submit">Save</button>
   <button id="deleteReservation" class="btn btn-danger btn-lg">Delete reservation</button>
