Navbar visible when logged in, update title fixed
- navbar visible on calendar, reservations, userReservations and userDetails views
- update title with 'new line' doesn't return html code

--- a/app/src/style/style.sass
+++ b/app/src/style/style.sass
@@ -10,7 +10,7 @@
 @import "./resetPasswordRequest.sass"
 @import "./prompt.sass"
 @import "./calendar.sass"
-@import "./navbar.scss"
+@import "./navbar.sass"
 
 html, body
   height: 100%
