--- a/app/src/style/reservationDetails.sass
+++ b/app/src/style/reservationDetails.sass
@@ -8,6 +8,9 @@ $defaultMargin: 1%
     font-weight: bold
     color: #66BBCC
 
+  #newTitle
+    display: inline-block
+
   .contentWrapper
     margin-top: $defaultMargin
     margin-bottom: $defaultMargin
