--- a/app/src/templates/navbar.hbs
+++ b/app/src/templates/navbar.hbs
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
+<nav id="userNavbar" class="navbar navbar-default">
+  <div class="container">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbarButtons" aria-expanded="true">
@@ -21,8 +21,12 @@
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li class="rightButtons"><a id="userDetailsRedirect" class="btn btn-link"></a></li>
-        <li class="rightButtons"><a id="logout" class="btn btn-link">Logout <span class="glyphicon glyphicon-log-out"></span></a></li>
+        <li class="rightButtons">
+          <a id="userDetailsRedirect" class="btn btn-link"></a>
+        </li>
+        <li class="rightButtons">
+          <a id="logout" class="btn btn-link">Logout <span class="glyphicon glyphicon-log-out"></span></a>
+        </li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
