--- a/app/src/style/style.sass
+++ b/app/src/style/style.sass
@@ -1,3 +1,5 @@
+$icon-font-path: "http://localhost:7070/fonts/"
+
 @import "../../../node_modules/fullcalendar/dist/fullcalendar"
 @import "../../../node_modules/bootstrap-sass/assets/stylesheets/_bootstrap-sprockets.scss"
 @import "../../../node_modules/bootstrap-sass/assets/stylesheets/_bootstrap.scss"
