Glyphicon font working, title update working only for keyboard input

--- a/app/src/style/style.sass
+++ b/app/src/style/style.sass
@@ -1,5 +1,5 @@
-$icon-font-path: "http://localhost:7070/fonts/"
-
+@import "./mixins.scss"
+@include font-face('Glyphicons Halflings', '../../../bootstrap/glyphicons-halflings-regular')
 @import "../../../node_modules/fullcalendar/dist/fullcalendar"
 @import "../../../node_modules/bootstrap-sass/assets/stylesheets/_bootstrap-sprockets.scss"
 @import "../../../node_modules/bootstrap-sass/assets/stylesheets/_bootstrap.scss"
