--- a/app/src/templates/navbar.hbs
+++ b/app/src/templates/navbar.hbs
@@ -1,5 +1,5 @@
 <nav id="userNavbar" class="navbar navbar-default">
-  <div class="container">
+  <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbarButtons" aria-expanded="true">
@@ -8,7 +8,6 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand">Brand</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
