Maximum duration is variable
- admin can change maxDuration for every room
- not tested

--- a/app/src/style/calendar.sass
+++ b/app/src/style/calendar.sass
@@ -1,5 +1,16 @@
+$defaultMargin: 2%
+
 #calendarWrapper
-  margin-top: 2%
+  margin-top: $defaultMargin
+
+  #maxDurationWrapper
+    display: none
+    width: 60%
+    padding: $defaultMargin
+    margin: 0 auto
+
+    .maxDurationField
+      width: 20%
 
 #noty_topLeft_layout_container
   top: 0 !important
