--- a/app/src/templates/calendar.hbs
+++ b/app/src/templates/calendar.hbs
@@ -10,6 +10,10 @@
 
         <button id="maxDurationConfirm" class="btn btn-success">Set max duration</button>
       </div>
+
+      <label>Maximum duration for this room: </label>
+      <span id="maxDurationLabel" class="maxDurationText"></span> <span class="maxDurationText"> minutes</span>
+
       <div class="col-xs-12">
         <div id="calendar"></div>
       </div>
